<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_personalInfo_changeHeadImg_btn_takePhoto"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:gravity="center_vertical"
        android:text="@string/report_reportReason"
        android:textSize="13sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_dd" />

    <TextView
        android:id="@+id/dialog_report_tv_illegality"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:text="@string/report_illegality"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_dd" />

    <TextView
        android:id="@+id/dialog_report_tv_violenceAndPornography"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:text="@string/report_violenceAndPornography"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_dd" />

    <TextView
        android:id="@+id/dialog_report_tv_advertisement"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:text="@string/report_advertisement"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_dd" />

    <TextView
        android:id="@+id/dialog_report_tv_other"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:text="@string/report_othe"
        android:textSize="16sp" />

</LinearLayout>