<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/setting_dialog_cleanCache_title"
        android:textColor="@color/gray_cc" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_dd" />

    <Button
        android:id="@+id/dialog_setting_cleanCache_btn_yes"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/dialog_item_btn"
        android:gravity="center"
        android:text="@string/setting_dialog_cleanCache_yes"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_dd" />

    <Button
        android:id="@+id/dialog_setting_cleanCache_btn_no"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/dialog_item_btn"
        android:gravity="center"
        android:text="@string/setting_dialog_cleanCache_no"
        android:textSize="16sp" />

</LinearLayout>