<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.FeedbackActivity">

    <RelativeLayout
        android:id="@+id/me_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/gray_ee">

        <TextView
            android:id="@+id/feedback_tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingBottom="10dp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:text="@string/back"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/feedback_title"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/feedback_tv_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:clickable="false"
            android:paddingBottom="10dp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:text="@string/confirm"
            android:textColor="@color/gray_cc" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_cc" />

    <EditText
        android:id="@+id/feedback_et"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:background="@null"
        android:gravity="top|start"
        android:hint="@string/feedback_input_hint"
        android:lineSpacingMultiplier="1.3"
        android:textCursorDrawable="@null"
        android:textSize="16sp" />

</LinearLayout>