<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_dd" />

    <Button
        android:id="@+id/dialog_personalInfo_changeHeadImg_btn_takePhoto"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/dialog_item_btn"
        android:gravity="center"
        android:text="@string/dialog_personalInfo_changeHeadImg_takePhoto"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_dd" />

    <Button
        android:id="@+id/dialog_personalInfo_changeHeadImg_btn_album"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/dialog_item_btn"
        android:gravity="center"
        android:text="@string/dialog_personalInfo_changeHeadImg_album"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_dd" />

    <Button
        android:id="@+id/dialog_personalInfo_changeHeadImg_btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/dialog_item_btn"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/gray"
        android:textSize="16sp" />

</LinearLayout>