<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_dd"
    android:orientation="vertical"
    tools:context=".activity.SettingActivity">

    <RelativeLayout
        android:id="@+id/me_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/gray_ee">

        <TextView
            android:id="@+id/setting_tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingBottom="10dp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:text="@string/back"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/setting_title"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_cc" />


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_cc" />


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_cc" />

    <RelativeLayout
        android:id="@+id/setting_rl_feedback"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:paddingEnd="20dp"
        android:paddingStart="20dp">

        <TextView
            android:id="@+id/setting_tv_opinion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/setting_feedback"
            android:textSize="16sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_cc" />

    <RelativeLayout
        android:id="@+id/setting_rl_cleanCache"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:paddingEnd="20dp"
        android:paddingStart="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/setting_cleanCache"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/setting_tv_cache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="0M"
            android:textColor="@color/gray_cc" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_cc" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:paddingEnd="20dp"
        android:paddingStart="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/setting_aboutUs"
            android:textSize="16sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_cc" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:paddingEnd="20dp"
        android:paddingStart="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/setting_share"
            android:textSize="16sp" />

    </RelativeLayout>

</LinearLayout>