<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:gravity="center_horizontal"
    android:orientation="vertical"

    tools:context="cn.tianyu_studio.musicpartnerapp.activity.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/register_title"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/reg_tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="40dp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="50dp"
        android:paddingStart="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/reg_et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_input_phone"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp"
                android:theme="@style/WhiteEditText" />

            <EditText
                android:id="@+id/reg_et_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_input_pwd"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp"
                android:theme="@style/WhiteEditText" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/reg_et_verifyCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_input_verification_code"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16sp"
                    android:theme="@style/WhiteEditText" />

                <Button
                    android:id="@+id/reg_btn_getVerifyCode"
                    android:layout_width="wrap_content"
                    android:layout_height="26dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/btn_white_solid_border"
                    android:text="@string/register_get_verification_code"
                    android:textColor="@color/white"
                    android:textSize="10sp" />
            </RelativeLayout>

            <Button
                android:id="@+id/reg_btn_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_btn_style"
                android:text="@string/register_next_step"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:src="@drawable/login_by_other" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp">

                <ImageView
                    android:id="@+id/login_iv_qq"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/qq" />

                <ImageView
                    android:id="@+id/login_iv_wechat"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/wechat" />

                <ImageView
                    android:id="@+id/login_iv_weibo"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/weibo" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>