<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_rl_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingEnd="50dp"
    android:paddingStart="50dp"
    tools:context="cn.tianyu_studio.musicpartnerapp.activity.LoginActivity">

    <RelativeLayout
        android:id="@+id/login_rl_title"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/login_title"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_rl_title"
        android:orientation="vertical">

        <!--<android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white">-->

        <EditText
            android:id="@+id/login_et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_username_hint"
            android:inputType="number"
            android:singleLine="true"
            android:text=""
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            android:theme="@style/WhiteEditText" />

        <!--</android.support.design.widget.TextInputLayout>-->

        <!--<android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white">-->

        <EditText
            android:id="@+id/login_et_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_pwd_hint"
            android:inputType="textPassword"
            android:singleLine="true"
            android:text=""
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            android:theme="@style/WhiteEditText" />

        <!--</android.support.design.widget.TextInputLayout>-->

        <Button
            android:id="@+id/login_btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_btn_style"
            android:text="@string/login_text"
            android:textColor="@color/white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/login_tv_forgetPwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_forget_pwd"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/login_tv_registerNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/login_register_now"
                android:textColor="@color/white" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:src="@drawable/login_by_other" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp">

            <ImageView
                android:id="@+id/login_iv_qq"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true"
                android:src="@drawable/qq" />

            <ImageView
                android:id="@+id/login_iv_wechat"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/wechat" />

            <ImageView
                android:id="@+id/login_iv_weibo"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/weibo" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>